--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Phase-4-Project",
+    "name": "phase-4-project",
     "description": "Build scripts for Heroku",
     "engines": {
         "node": ">= 14"
