--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@material-ui/core": "^4.12.4",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
