--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
         "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
     },
     "dependencies": {
-        "@material-ui/core": "^4.12.4",
         "react": "^17.0.2",
-        "scripts": "^0.1.0",
-        "styled-components": "^5.3.5"
+        "scripts": "^0.1.0"
+       
     }
 }
