--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
         "axios": "^0.27.2",
         "cloudinary-react": "^1.7.2",
         "react": "^17.0.2",
-        "scripts": "^0.1.0"
+        "scripts": "^0.1.0",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/material": "^5.8.6"
+
     }
 }
